tests/ui/result_error/error_types.stderr
error: Type 'i32' is used as an error type in Result but does not implement Error trait
  --> tests/ui/result_error/error_types.rs:34:5
   |
LL | /     fn bad_primitive_error() -> Result<(), i32> {
LL | |         Ok(())
LL | |     }
   | |_____^
   |
   = help: Implement the Error trait for this type or use a type that implements Error.
   = note: Applied by cargo-pup rule 'result_error_test'.
   = note: `#[deny(result_error)]` on by default

error: Type 'test::CustomError' is used as an error type in Result but does not implement Error trait
  --> tests/ui/result_error/error_types.rs:39:5
   |
LL | /     fn bad_custom_error() -> Result<(), CustomError> {
LL | |         Ok(())
LL | |     }
   | |_____^
   |
   = help: Implement the Error trait for this type or use a type that implements Error.
   = note: Applied by cargo-pup rule 'result_error_test'.

error: aborting due to 2 previous errors

